<resources>
    <string name="app_name" translatable="false">AndroidClient</string>
    <!-- Strings related to login -->
    <string name="prompt_login" translatable="false">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings related to publication view -->
    <string name="title_activity_pubs">Publications</string>
    <string name="author_label">Author:</string>
    <string name="publisher_label">Publisher:</string>
    <string name="year_label">Year:</string>
    <string name="trash_description">rubbish dump</string>
    <!-- Strings related to add publication view -->
    <string name="title_activity_addPub">Add a publication</string>
    <string name="title_label">Title:</string>
    <string name="internet_error">Error in the Internet connection.</string>
    <string name="data_sync_error">Data could not be synced.</string>
    <string name="try_again_later">Try again later.</string>
    <!-- Strings related to contextual toolbar -->
    <string name="selected">Selected</string>
    <string name="download">Download</string>
    <string name="delete_pub">Delete publication</string>
    <string name="attach_file">Attach file</string>
    <string name="delete_file">Delete file</string>
    <string name="no_write_permission">Without this permission app cannot download files!</string>
    <string name="logout">Logout</string>
</resources>
