<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        tools:text="@tools:sample/lorem" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/author_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/author_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.7"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="@tools:sample/lorem[2]" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/publisher_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/publisher_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/publisher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.7"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="@tools:sample/lorem[2]" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/year_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/year_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.7"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="@tools:sample/lorem[0]" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/file_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="@tools:sample/lorem[5]" />

        <ImageButton
            android:id="@+id/delete_file_button"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:contentDescription="@string/trash_description"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_delete_black_24dp" />

    </LinearLayout>

</LinearLayout>